# VIDAProject

./: CONTRIBUTING.md  LICENSE  README.md
VIDAProject/vida_project_api/vida_project_api/: voiceRecording.py
docs/: index.html  reuniao.md
docs/main_html/: index.html  package.json
docs/main_html/src/: App.jsx
docs/main_html/src/components/: ErrorScreen.jsx  FormInput.jsx  LoginScreen.jsx  RegisterScreen.jsx  SuccessScreen.jsx  Toast.jsx  WelcomeScreen.jsx
docs/meetings/: sprint_0.md  sprint_1.md
docs/spikeDocumentation/: speechbrain_spike_doc.md
docs/studies/: Software-Requirements.md
docs/studies/OOP/: OOP.md
docs/studies/Software-Requirements/: Software-Requirements.md
documentation/: api.md  setup.md
documentation/meetings/: sprint_10.md  sprint_11.md  sprint_12.md  sprint_13.md  sprint_14.md  sprint_15.md  sprint_2.md  sprint_3.md  sprint_4.md  sprint_5.md  sprint_6.md  sprint_7.md  sprint_8.md  sprint_9.md
documentation/studies/Design-tools/: FigmaAndMiro.md
documentation/studies/MFCC_GMM/: mfcc_gmm.md
documentation/studies/SystemDesign/: arquiteturaradew.md
documentation/studies/agileMethodologies/: agil-methodologies.md
documentation/studies/git-fundamentals/: git.md
documentation/studies/linuxMigration/: overview_ubuntu_22_04.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ErrorScreen.jsx  LoginScreen.jsx  RegisterScreen.jsx  SuccessScreen.jsx  VoiceLogin.jsx  VoiceRecorder.jsx  VoiceRegistration.jsx  WelcomeScreen.jsx
frontend/src/services/: api.js
frontend/src/styles/: App.css  ErrorScreen.css  FormInput.css  LoginScreen.css  RegisterScreen.css  SuccessScreen.css  Toast.css  VoiceLogin.css  VoiceRecorder.css  VoiceRegistration.css  WelcomeScreen.css  index.css
frontend/src/utils/: validation.js
vida_project_api/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  fly.toml  migration.py  pyproject.toml
vida_project_api/feature_spikeCreateEmbedding/: voiceRecording.py
vida_project_api/feature_spikePredownloading/: voiceRecording.py
vida_project_api/migrations/: env.py
vida_project_api/migrations/versions/: 3bb009903077_create_tables.py  d4c002bbd8cb_update_voice_field_to_text_for_base64_.py  f21a7fee7e38_add_password_field_to_users_table.py
vida_project_api/tests/: test_voiceRecording.py
vida_project_api/vida_project_api/: app.py  database.py  models.py  mp3_loader.py  schemas.py  settings.py  voiceRecording.py
(+9 files in other folders)
