[project]
name = "vida-project-api"
version = "0.1.0"
description = ""
authors = [
    {name = "vhcsdev",email = "victorwise@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "speechbrain (>=1.0.3,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"


[tool.ruff]
line-length = 80
extend-exclude = [
    "migrations",
    "tests",
]

[tool.ruff.lint]
preview = true
select = [
    "I",
    "F",
    "E",
    "W",
    "PL",
    "PT"
]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
pre_test = "task lint"
test = "pytest -s -x --cov=vida_project_api -vv"
post_test = "coverage html"
run = "fastapi dev vida_project_api/app.py"
